2008-10-21  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Removed common stuff in order to reduce duplication with
	other Makefiles.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Added support for generating the documentation files to
	the build process.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/index.xml, doc/ns-Gendarme.Rules.Correctness.xml,
	doc/Gendarme.Rules.Correctness: With the new code in the Makefiles we
	don't need to keep the documentation files in the repository.

2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/: Initial import documentation for the rules which belongs to this
	category.

2008-10-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidConstructorsInStaticTypesRule.cs: Add [FxCopCompatibility] 
	attribute.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodCanBeMadeStaticRule.cs: Add [FxCopCompatibility] attribute.
	* ReviewCastOnIntegerDivisionRule.cs: New. Rule that check for
	wrong casts when integers are divided, resulting in truncated floating
	point values.
	* ReviewCastOnIntegerMultiplicationRule.cs: New. Rule that check
	for wrong cast when multiplying integers, potentially resulting in an
	overflow before the cast is done to a larger type.
	* Makefile.am: Add new rules and tests to the build.

2008-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AttributeStringLiteralsShouldParseCorrectlyRule.cs: Add
	the [FxCopCompatibility] attribute and a few minor changes to the 
	XML documentation.

2008-10-06  Néstor Salceda  <nestor.salceda@gmail.com>

	* AttributeStringLiteralsShouldParseCorrectlyRule.cs: New.  Rule for
	ensuring the correct arguments passed as string to attributes.
	* Gendarme.Rules.Correctness.mdp: Update MD project file.
	* Makefile.am: Added the rule and test to the build.

2008-09-23  Sebastien Pouliot  <sebastien@ximian.com>

	* FloatComparisonRule.cs: Change IsApplicable to static (self-test)